# se

./: .gitignore  README.md  all.txt  config_example.yaml  pyproject.toml
configs/: test_data2.yaml  test_real_data.yaml
scripts/: extract_subcube.py  integration_test_real_data.py  project_pack.py  run_pipeline_test.py
seis2cube/: __init__.py  cli.py  config.py
seis2cube/calibration/: __init__.py  base.py  gbdt.py  global_shift.py  regression.py  windowed.py
seis2cube/geometry/: __init__.py  crs_converter.py  geometry_model.py  overlap_detector.py
seis2cube/interpolation/: __init__.py  base.py  idw.py  mssa.py  pocs.py
seis2cube/io/: __init__.py  chunked_storage.py  segy_dataset.py  segy_writer.py
seis2cube/models/: __init__.py  line2d.py  volume.py
seis2cube/pipeline/: __init__.py  runner.py  volume_builder.py
seis2cube/qc/: __init__.py  metrics.py  reporter.py
seis2cube/ui/: __init__.py  app.py  components.py  state.py
seis2cube/utils/: array_utils.py  spectral.py
tests/: conftest.py  conftest_ui.py  test_calibration.py  test_geometry.py  test_interpolation.py  test_io.py  test_performance.py  test_spectral.py  test_ui_integration.py  test_ui_streamlit.py
