[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seis2cube"
version = "0.1.0"
description = "Extend 3D SEG-Y cubes from 2D profiles with calibration against existing 3D"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "seis2cube contributors"}]

dependencies = [
    "segyio>=1.9,<2.0",
    "numpy>=1.24",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "pyproj>=3.6",
    "shapely>=2.0",
    "pydantic>=2.4",
    "pyyaml>=6.0",
    "loguru>=0.7",
    "rich>=13.0",
    "click>=8.1",
    "streamlit>=1.30",
    "plotly>=5.18",
    "pandas>=2.0",
]

[project.optional-dependencies]
dask = ["dask[array]>=2023.9", "xarray>=2023.9", "zarr>=2.16", "segysak>=0.4"]
ml = ["xgboost>=2.0", "lightgbm>=4.0"]
dl = ["torch>=2.1"]
dev = ["pytest>=7.4", "pytest-cov", "ruff>=0.1"]
all = ["seis2cube[dask,ml,dl,dev]"]

[project.scripts]
seis2cube = "seis2cube.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["seis2cube*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
